# DataStructuresCodeNCodeSeries

./: README.md
NumberTheory/: CMakeLists.txt  main.cpp
NumberTheory/L00CourseOverView/: NumberTheoryCourseOverview.fdb_latexmk  NumberTheoryCourseOverview.fls  NumberTheoryCourseOverview.tex
NumberTheory/L01PrimalityTesting/: naiveprimality.cpp  sqrtAlgo.cpp
NumberTheory/L03PrimeFactorization/: OptimedFactors.cpp
NumberTheory/L04BinaryExponentiation/: powerMod.cpp
NumberTheory/L06MatrixExponentiation/: matrixExp.cpp
NumberTheory/L07NthElementRecurrence/: generalFibonacci.cpp
NumberTheory/L09_10ModularArithmetic/: codeforcesProblem.cpp
NumberTheory/L11ModularGCD/: modularGCDCodechef.cpp
NumberTheory/L12ModuloMultiplicativeInverse/: moduloInverseFermat.cpp
NumberTheory/L13ModuloMultiplicativeInverse/: moduloInverse.cpp
NumberTheory/L14TotalDivisorsFromPrimeFactorization/: totalDivisors.cpp
NumberTheory/L15BinomialCoefficient/: binomialCoeffUsingModuloInverse.cpp
NumberTheory/L16EulerTotient/: eulertotient.fdb_latexmk  eulertotient.fls  eulertotient.tex
NumberTheory/L18EulerTotientFunction/: EulerTotient.cpp
NumberTheory/L19EulerTotientFuctionFast/: EulerTotientFast.cpp
NumberTheory/L19_1Problem/: SpojProb1.cpp
NumberTheory/L1PrimalityTesting/: naiveprimality.cpp  sqrtAlgo.cpp
NumberTheory/L20GCDSumEulerTotient/: GCDSumEulerTotient.tex
NumberTheory/L21GCDSumEulerTotientCode/: GCDSum.cpp
NumberTheory/L22SegmentedSeive/: E003PrimeGenerator.cpp  SegmentedSeive.cpp
NumberTheory/L22_Problem/: PrimeGenerator.cpp
(+112 files in other folders)
